kursovoy-proekt/vs-fronend.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "shop.sgumerov.site"
  gateways:
  - cluster-gateway
  http:
  - match:
    - uri: 
        exact: /       
    - uri:
        prefix: /static
    route:
    - destination:
        host: frontend
        port:
          number: 80
  
...
