kursovoy-proekt/vs-grafana.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.sgumerov.site"
  gateways:
  - cluster-gateway
  http:
  - match:
    - uri: 
        prefix: /       
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000 
...
