kursovoy-proekt/vs-kiali.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
  - "kiali.sgumerov.site"
  gateways:
  - cluster-gateway
  http:
  - match:
    - uri: 
        prefix: /       
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001 
...
