kursovoy-proekt/vs-prometheus.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - "prometheus.sgumerov.site"
  gateways:
  - cluster-gateway
  http:
  - match:
    - uri: 
        prefix: /       
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090 
...
